# PyVmote

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
Pyvmote/: Graph_generator.py  Service.py  pyvmote.py
Pyvmote/static/: graph_history.json
Pyvmote/static/css/: style.css
Pyvmote/static/dinamics/: script.js
Pyvmote/templates/: index.html
pyvmote/: __init__.py  core.py  graph_generator.py  service.py
pyvmote/static/: graph_history.json
pyvmote/static/css/: style.css
pyvmote/static/dinamics/: preview.js
pyvmote/templates/: index.html  preview.html  viewer.html
tests/: demo.py  test_pyvmote.py
