[project]
name = "pyvmote"
version = "1.1.1"
description = "Librería para generar gráficos y visualizar imágenes en tiempo real en remoto"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Juan Grima Sanchez", email="juan.grimasanchez5@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "matplotlib",
  "mpld3",
  "scipy",
  "numpy",
  "pandas",
  "scikit-learn",
  "pillow>=10.0.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
